Controllers Tests corrected and refactored